[gd_scene load_steps=10 format=3 uid="uid://fd8rp71ui5dl"]

[ext_resource type="Script" path="res://autoload/sound_manager.gd" id="1_aac62"]
[ext_resource type="AudioStream" uid="uid://46n24xf56k6h" path="res://sounds/bullet.wav" id="2_6awir"]
[ext_resource type="AudioStream" uid="uid://bli3ewtti4t5y" path="res://sounds/metal_high_hit.wav" id="3_ac2jr"]
[ext_resource type="AudioStream" uid="uid://tqtnb23wa3wj" path="res://sounds/metal_low_hit.wav" id="4_kllue"]
[ext_resource type="AudioStream" uid="uid://bjk8lkjldwqy4" path="res://sounds/rock_1_hit.wav" id="4_tga1j"]
[ext_resource type="AudioStream" uid="uid://b1hssplhu8pw6" path="res://sounds/rock_2_hit.wav" id="6_qeahq"]
[ext_resource type="AudioStream" uid="uid://bgg1647kli6cd" path="res://sounds/rock_3_hit.wav" id="7_y4q53"]
[ext_resource type="AudioStream" uid="uid://cijdjt5ky4bs1" path="res://sounds/explosion.wav" id="8_uvg11"]
[ext_resource type="AudioStream" uid="uid://bgpajbslfdy2l" path="res://sounds/missile.wav" id="9_pvpd7"]

[node name="sound_manager" type="Node"]
script = ExtResource("1_aac62")

[node name="BulletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_6awir")

[node name="MetalHit1Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ac2jr")

[node name="MetalHit2Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kllue")

[node name="RockHit1Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tga1j")

[node name="RockHit2Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qeahq")

[node name="RockHit3Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_y4q53")

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_uvg11")

[node name="MissileSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_pvpd7")
